# bric-lang

./: .gitignore  Cargo.toml  README.md  bric_lang_printf.ll  build.rs  test.bric
src/: bric_lang.lalrpop  main.rs
src/ast/: block.rs  expression.rs  functions.rs  item.rs  mod.rs  program.rs  statement.rs  utils.rs  value.rs
