[package]
name = "bric-lang"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer", "regex", "unicode"] }
llvm-sys = { version = "150.1.2", features = ["prefer-dynamic"] }

[build-dependencies]
lalrpop = "0.20.0"
